2007-11-04  Callum McKenzie  <callum@spooky-possum.org>

	* gweather-prefs.c: Change the guard #ifdefs for nl_langinfo stuff
	so that autoconfig works correctly. Patch from Matthias Clasen
	(Bug #491438). Also added an #ifdef around the langingo.h #include
	in case the file isn't present at all (Mac OS X?).

	* weather.c (weather_info_abort): Ensure the requests_pending flag
	is cleared on abort. Another Matias Clasen special (Bug #491437).

	* weather.h (weather_info_update): Remove a trailing ; from the
	macro. Spotted by Matthias Clasen (Bug #491435).

2007-10-13  Callum McKenzie  <callum@spooky-possum.org>

	* weather.c (temperature_string): Use appropriate unicode Degree
	Celsius and Degree Fahrenheit symbols instead of the generic
	Degree symbol. Patch from Alex Jones (Bug #468887).

	* gweather.pc.in (Libs): Make sure the library is linked in. Patch
	courtesy of Matthias Clasen (bug #479172). Also added -lm to the
	libs list for completeness.

2007-07-12  Callum McKenzie  <callum@spooky-possum.org>

	* weather-metar.c (make_time): Fix the logic to only fiddle the
	day number on the 1st. Based on Elliott Hughes patch from bug
	#455012. Improved comments.

2007-07-11  Callum McKenzie  <callum@spooky-possum.org>

	* weather-sun.c (calc_sun): Use the current time rather than the
	observation time to calculate the sunrise and sunset times. Fixes
	the case where the observation gets horribly out of date. See bug
	#455012.

2007-05-13  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Add GNOME_APPLETS_CFLAGS to get
	GConf includes. Fixes the build for me.

2007-01-05  Kjartan Maraas  <kmaraas@gnome.org>

	* weather-met.c: s/malloc.h/stdlib.h/
	Closes bug #387179. Patch from Roy Marples.

2006-08-07  Davyd Madeley  <davyd@madeley.id.au>

	* weather-bom.c:
	* weather-met.c:
	- catch possible NULL pointers when parsing strings. Patches from
	  Kevin Bauder <kevin.bauder@gmail.com>. Closes #170628.

2006-07-23  Davyd Madeley  <davyd@madeley.id.au>
