@@ -1,3 +1,10 @@
+2007-11-16  Callum McKenzie  <callum@spooky-possum.org>
+
+	* weather-iwin.c: Removed unused (#if 0) code, look in SVN if it
+	turns out to have been important. Prevent a random space appearing
+	in the forecast (patch from Michael Vrable, Bug #497204). Add a
+	bit of explanation about what that piece of code is trying to do.
+
 2007-11-04  Callum McKenzie  <callum@spooky-possum.org>
 
 	* gweather-prefs.c: Change the guard #ifdefs for nl_langinfo stuff
